CHANGES
0.10.17
- handle $c and $v title subfields

0.10.16 (February 15, 2023)
- dc.update_date initialized to datetime.date.min 

0.10.15 (February 1, 2023)
- libgutenberg is not compatible with SQLAlchemy 2.0; added a version restriction
- in logging tests, clean up the open log file
- fileinfo didn't work properly in non-pg installations, which depended on symlinks in the filesystem. refactored the file path massaging when storing filenames.
- curly quotes in titles are straightened.
- store subtitle in a marc subfield
- pubinfo was not being reconstituted when loaded from the database
- add support for place in pubinfo
- add spaces after tight commas in rendered pubinfo string
- update json support to version 3.03 of workflow
- remove unused DublinCore.PARSEABLE_EXTENSIONS
- added `update_date` property to DublinCore
- removed code that was adding update date to credit.
- strip updates from db credits.

0.10.13 (December 26, 2022)
- load_from_pgheader now treats allows any plural metadata keywords. ending 's' of a keyword it stripped so that "Editors" is treated the same way "Editor" is.
- refactored and delinted DublinCore
- added tests for translator handling

0.10.10 (December 14, 2022)
- fix undefined variable in pub info handler
- matching of author names with the data base is now stricter - matches may not match partial names.
- delint DublinCore and DublinCoreMapping

0.10.9 (November 28, 2022)
- don't allow creators to be named ""
- fix tests so they don't break so easily when database is updated.

0.10.8 (October 23, 2022)
- dc.credit is doing double duty - it's storing update notices as well as production credits. so updates need to be more sophisticated - updates can be added, credits are fixed. This fixes a problem where credits pulled from the source file are not included in the credites metadata.

0.10.7 (October 7, 2022)