@@ -1,6 +1,7 @@
 CHANGES
 0.10.17
 - handle $c and $v title subfields
+- include subfield marker removal in GutenbergGlobals.insert_breaks
 
 0.10.16 (February 15, 2023)
 - dc.update_date initialized to datetime.date.min 
